change: store refresh token in cookie, rename jwt id to sub
